added validations to the products model and then wrote unit and functional tests to make sure everything is working the way I want.

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  title: MyString
-  description: MyText
-  image_url: MyString
+menu_item:
+  title: pizza
+  description: this is a description of a pizza
+  image_url: picture_of_pizza.png
   price: 9.99
 
-two:
-  title: MyString
-  description: MyText
-  image_url: MyString
-  price: 9.99
+another_menu_item:
+  title: burger
+  description: This is a description of a burnger
+  image_url: picture_of_burger.gif
+  price: 12.99
